--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,8 @@ models/RandomForest_model.sav
 1VRA/data/LBL_VOL_PROCESSED_20260216_003220_icicibank.csv
 1VRA/data/PROCESSED_20260216_003220_icicibank.csv
 1VRA/data/VOL_PROCESSED_20260216_003220_icicibank.csv
+1VRA/data/20260216_223005_icicibank.csv
+1VRA/data/CLUSTER_LBL_VOL_PROCESSED_20260216_223005_icicibank.csv
+1VRA/data/LBL_VOL_PROCESSED_20260216_223005_icicibank.csv
+1VRA/data/PROCESSED_20260216_223005_icicibank.csv
+1VRA/data/VOL_PROCESSED_20260216_223005_icicibank.csv
